# SafeVision

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/api/: dependencies.py
app/core/: constants.py  exceptions.py  logging.py  settings.py
app/datasets/: collate.py  dataset_factory.py  metadata.py  pipeline.py  samplers.py  splitter.py  statistics.py  validators.py
app/deployment/: docker_utils.py  export_onnx.py  export_tensorrt.py
app/evaluation/: benchmark.py  evaluator.py  failure_analysis.py  night_analysis.py  occlusion_analysis.py  slice_analysis.py  weather_analysis.py
app/explainability/: attention_maps.py  feature_importance.py  gradcam.py  shap_analysis.py
app/inference/: confidence_calibration.py  nms.py  pipeline.py  postprocessing.py  predictor.py  visualization.py
app/metrics/: base.py  confusion_matrix.py  false_negative_rate.py  iou.py  latency.py  map.py  precision.py  recall.py  robustness.py
app/reports/: dashboard_data.py  html_report.py  pdf_report.py  report_generator.py
app/risk/: confidence_estimator.py  decision_engine.py  failure_detector.py  risk_analyzer.py  risk_score.py  uncertainty.py
app/schemas/: __init__.py  benchmark.py  coco.py  dataset.py  detection.py  history.py  metadata.py  risk.py  (+5 more)
docs/: datasets.md  evaluation.md  sotif.md  testing.md
scripts/: 01_download_coco.py  02_create_subset.py  03_dataset_pipeline.py  download_datasets.py  export_model.py  generate_report.py  preprocess.py  train_detector.py  train_xgboost.py
tests/: test_detector.py  test_metrics.py  test_reports.py  test_risk.py
(+66 files in other folders)
