[project]
name = "safevision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "black>=26.5.1",
    "loguru>=0.7.3",
    "mypy>=2.2.0",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pycocotools>=2.0.11",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "ruff>=0.15.20",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "tqdm>=4.68.3",
]


[tool.ruff]

line-length = 88

target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "logs",
    "notebooks",
]
